automate circulator items

--- a/columntest.html
+++ b/columntest.html
@@ -29,8 +29,8 @@
                 <h1 align='center'><i class="fa fa-id-card" aria-hidden="true"></i> Library Cards</h1> 
                 <div class="row">
                     <div class="col-lg-8">
-                        <p>Total: <span id=library-total class="odometer">0</span></p>
-                        <p>Percent Expired: <span id=library-percent-expired class="odometer">0</span>%</p>
+                        <p>Total: <span id="library-total" class="odometer">0</span></p>
+                        <p>Percent Expired: <span id="library-percent-expired" class="odometer">0</span>%</p>
                     </div>
                 </div>
           </div>
@@ -39,10 +39,10 @@
                 <h1 align="center"><i class="fa fa-users" aria-hidden="true"></i> Meetings</h1>
                 <div class="row">
                     <div class="col-lg-8">
-                        <p> Today: <span id=m0 class="odometer">0</span></p>
-                        <p> This week: <span id=m1 class="odometer">0</span></p>
-                        <p> This month: <span id=m2 class="odometer">0</span></p>
-                        <p> This year: <span id=m3 class="odometer">0</span></p>
+                        <p> Today: <span id="m0" class="odometer">0</span></p>
+                        <p> This week: <span id="m1" class="odometer">0</span></p>
+                        <p> This month: <span id="m2" class="odometer">0</span></p>
+                        <p> This year: <span id="m3" class="odometer">0</span></p>
                     </div>
                 </div>
           </div>
@@ -65,7 +65,7 @@
                 <h1 align='center'><i class="fa fa-line-chart" aria-hidden="true"></i> Open Data</h1> 
                 <div class="row">
                     <div class="col-lg-8">
-                        <p>Number of datasets: <span id="num_datasets" class="odometer">0</span></p>
+                        <p>Number of datasets: <span id="num-datasets" class="odometer">0</span></p>
                     </div>
                 </div>
           </div>
@@ -75,7 +75,7 @@
                 <div class="row">
                     <div class="col-lg-8">
                         <p>Current Location: 126-158 Library Dr, Chapel Hill, NC 27514, USA</p>
-                        <p># of Items: <span class="odometer">3</span></p>
+                        <p># of Items: <span id="circulator" class="odometer">0</span></p>
                     </div>
                 </div>
           </div>
