--- a/columntest.html
+++ b/columntest.html
@@ -74,7 +74,7 @@
                 <h1 align='center'><i class="fa fa-truck" aria-hidden="true"></i></i> Circulator</h1> 
                 <div class="row">
                     <div class="col-lg-8">
-                        <p>Current Location: 126-158 Library Dr, Chapel Hill, NC 27514, USA</p>
+                        <p>Current Location: <span id="circ-location"></span></p>
                         <p># of Items: <span id="circulator" class="odometer">0</span></p>
                     </div>
                 </div>
