--- a/columntest.html
+++ b/columntest.html
@@ -17,8 +17,8 @@
                 <h1 align='center'><i class="fa fa-user" aria-hidden="true"></i> Patrons</h1> 
                 <div class="row">
                     <div class="col-lg-8">
-                        <p>Blocked patrons: <span class="odometer">0</span></p>
-                        <p>Average Age: <span class="odometer">0</span></p>
+                        <p>Blocked patrons: <span id="blocked" class="odometer">0</span></p>
+                        <p>Average Age: <span id="avg-age" class="odometer">0</span></p>
                         <p>Chapel Hill: <span class="odometer">0</span></p>
                         <p>Other: <span class="odometer">0</span></p>
                     </div>
