updated patron data on dashboard

--- a/columntest.html
+++ b/columntest.html
@@ -19,7 +19,7 @@
                     <div class="col-lg-8">
                         <p>Blocked patrons: <span id="blocked" class="odometer">0</span></p>
                         <p>Average Age: <span id="avg-age" class="odometer">0</span></p>
-                        <p>Chapel Hill: <span class="odometer">0</span></p>
+                        <!--<p>Chapel Hill: <span class="odometer">0</span></p>-->
                         <p>Other: <span class="odometer">0</span></p>
                     </div>
                 </div>
