added overdue items to dashboard

--- a/columntest.html
+++ b/columntest.html
@@ -20,7 +20,7 @@
                         <p>Blocked patrons: <span id="blocked" class="odometer">0</span></p>
                         <p>Average Age: <span id="avg-age" class="odometer">0</span></p>
                         <!--<p>Chapel Hill: <span class="odometer">0</span></p>-->
-                        <p>Other: <span class="odometer">0</span></p>
+                        <!--<p>Other: <span class="odometer">0</span></p>-->
                     </div>
                 </div>
           </div>
@@ -56,7 +56,7 @@
                     <div class="col-lg-8">
                         <p>Checkouts today: <span class="odometer">0</span></p>
                         <p>Returns today: <span class="odometer">0</span></p>
-                        <p>Amount overdue: <span class="odometer">0</span></p>
+                        <p>Amount overdue: <span id="overdue" class="odometer">0</span></p>
                     </div>
                 </div>
           </div>
