--- a/columntest.html
+++ b/columntest.html
@@ -54,8 +54,8 @@
                 <h1 align='center'><i class="fa fa-barcode" aria-hidden="true"></i> Items</h1> 
                 <div class="row">
                     <div class="col-lg-8">
-                        <p>Checkouts today: <span class="odometer">0</span></p>
-                        <p>Returns today: <span class="odometer">0</span></p>
+                        <p>Checked out: <span id="checked" class="odometer">0</span></p>
+                        <!--<p>Returns today: <span class="odometer">0</span></p>-->
                         <p>Amount overdue: <span id="overdue" class="odometer">0</span></p>
                     </div>
                 </div>
