added total available items

--- a/columntest.html
+++ b/columntest.html
@@ -55,8 +55,8 @@
                 <div class="row">
                     <div class="col-lg-8">
                         <p>Checked out: <span id="checked" class="odometer">0</span></p>
-                        <!--<p>Returns today: <span class="odometer">0</span></p>-->
                         <p>Amount overdue: <span id="overdue" class="odometer">0</span></p>
+                        <p>Total Available: <span id="totalAvailable" class="odometer">0</span></p>
                     </div>
                 </div>
           </div>
