--- a/index.html
+++ b/index.html
@@ -71,11 +71,12 @@
         </div>
             
         <div class="container">
-            <h1 align='center'><i class="fa fa-truck" aria-hidden="true"></i></i> Circulator</h1> 
+            <h1 align='center'><i class="fa fa-globe" aria-hidden="true"></i></i>Website</h1> 
             <div class="row">
                 <div class="col-lg-8">
-                    <h5>Current Location: </h5>
-                    <h5># of Items:</h5>
+                    <h5>Sessions today: </h5>
+                    <h5>Sessions this month: </h5>
+                    <h5>Top search today: </h5>                   
                 </div>
             </div>
         </div>
