added percent items checked out

--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
                     <div class="col-lg-8">
                         <p>Blocked patrons: <span id="blocked" class="odometer">0</span></p>
                         <p>Average Age: <span id="avg-age" class="odometer">0</span></p>
-                        <!--<p>Chapel Hill: <span class="odometer">0</span></p>-->
-                        <!--<p>Other: <span class="odometer">0</span></p>-->
                     </div>
                 </div>
           </div>
@@ -57,6 +55,7 @@
                         <p>Checked out: <span id="checked" class="odometer">0</span></p>
                         <p>Amount overdue: <span id="overdue" class="odometer">0</span></p>
                         <p>Total Available: <span id="totalAvailable" class="odometer">0</span></p>
+                        <p>Percent Checked out: <span id="items-percent-out" class="odometer">0</span>%</p>
                     </div>
                 </div>
           </div>
