changed num datasets panel to catalog data

--- a/index.html
+++ b/index.html
@@ -61,10 +61,11 @@
           </div>
         
           <div class="col-xs-6 col-sm-4" style="color: white; background-color: #555555">
-                <h1 align='center'><i class="fa fa-line-chart" aria-hidden="true"></i> Open Data</h1> 
+                <h1 align='center'><i class="fa fa-line-chart" aria-hidden="true"></i> Catalog</h1> 
                 <div class="row">
                     <div class="col-lg-8">
-                        <p>Number of datasets: <span id="num-datasets" class="odometer">0</span></p>
+                        <p>Top search today: <span id="topCatToday">0</span></p>
+                        <p>Top search this month: <span id="topCatMonth">0</span></p>
                     </div>
                 </div>
           </div>
