changed icon for catalog, updated some text

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h1 align='center'><i class="fa fa-user" aria-hidden="true"></i> Patrons</h1> 
                 <div class="row">
                     <div class="col-lg-8">
-                        <p>Blocked patrons: <span id="blocked" class="odometer">0</span></p>
+                        <p>Number Blocked: <span id="blocked" class="odometer">0</span></p>
                         <p>Average Age: <span id="avg-age" class="odometer">0</span></p>
                     </div>
                 </div>
@@ -61,11 +61,11 @@
           </div>
         
           <div class="col-xs-6 col-sm-4" style="color: white; background-color: #555555">
-                <h1 align='center'><i class="fa fa-line-chart" aria-hidden="true"></i> Catalog</h1> 
+                <h1 align='center'><i class="fa fa-search" aria-hidden="true"></i> Catalog</h1> 
                 <div class="row">
                     <div class="col-lg-8">
-                        <p>Top search today: <span id="topCatToday">0</span></p>
-                        <p>Top search this month: <span id="topCatMonth">0</span></p>
+                        <p>Top search today: <span id="topCatToday">None</span></p>
+                        <p>Top search this month: <span id="topCatMonth">None</span></p>
                     </div>
                 </div>
           </div>
@@ -76,8 +76,8 @@
                     <div class="col-lg-8">
                         <p>Sessions today: <span id="sToday" class="odometer">0</span></p>
                         <p>Sessions this month: <span id="sMonth" class="odometer">0</span></p>
-                        <p>Top search today: <span id="topToday">0</span></p>
-                        <p>Top search this month: <span id="topMonth">0</span></p>
+                        <p>Top search today: <span id="topToday">None</span></p>
+                        <p>Top search this month: <span id="topMonth">None</span></p>
                     </div>
                 </div>
           </div>
