removed top search today & checkedout items for debugging, added last updated field

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <h1 align='center'><i class="fa fa-barcode" aria-hidden="true"></i> Items</h1> 
                 <div class="row">
                     <div class="col-lg-8">
-                        <p>Checked out: <span id="checked" class="odometer">0</span></p>
+                        <!--<p>Checked out: <span id="checked" class="odometer">0</span></p>-->
                         <p>Amount overdue: <span id="overdue" class="odometer">0</span></p>
                         <p>Total Available: <span id="totalAvailable" class="odometer">0</span></p>
                         <p>Percent Checked out: <span id="items-percent-out" class="odometer">0</span>%</p>
@@ -76,10 +76,12 @@
                     <div class="col-lg-8">
                         <p>Sessions today: <span id="sToday" class="odometer">0</span></p>
                         <p>Sessions this month: <span id="sMonth" class="odometer">0</span></p>
-                        <p>Top search today: <span id="topToday">None</span></p>
+                        <!--<p>Top search today: <span id="topToday">None</span></p>-->
                         <p>Top search this month: <span id="topMonth">None</span></p>
                     </div>
                 </div>
+                <br><br><br>
+                <p id="stamp" style="color: black"></p>
           </div>
         </div>
         
