changed time zone

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <h1 align='center'><i class="fa fa-barcode" aria-hidden="true"></i> Items</h1> 
                 <div class="row">
                     <div class="col-lg-8">
-                        <!--<p>Checked out: <span id="checked" class="odometer">0</span></p>-->
+                        <p>Checked out: <span id="checked" class="odometer">0</span></p>
                         <p>Amount overdue: <span id="overdue" class="odometer">0</span></p>
                         <p>Total Available: <span id="totalAvailable" class="odometer">0</span></p>
                         <p>Percent Checked out: <span id="items-percent-out" class="odometer">0</span>%</p>
