--- a/index.html
+++ b/index.html
@@ -65,7 +65,14 @@
                 <div class="row">
                     <div class="col-lg-8">
                         <p>Top search today: <span id="topCatToday">None</span></p>
-                        <p>Top search this month: <span id="topCatMonth">None</span></p>
+                        <form style="color: black" action="daily_cat_searches.html">
+                            <input type="submit" value="More searches today"/>
+                        </form>
+                        <p>Top search this month: <span id="topCatMonth">None</span>
+                        <form style="color: black" action="monthly_cat_searches.html">
+                            <input type="submit" value="More searches this month"/>
+                        </form>
+                        </p>
                     </div>
                 </div>
           </div>
