--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
     <body>
     
-        <div class="row" style="height:49%">
-          <div class="col-xs-12 col-sm-4" style="color: white; background-color: #1975bc">
+        <div class="row" style="height:48%">
+          <div class="col-xs-6 col-sm-4" style="color: white; background-color: #1975bc">
                 <h1 align='center'><i class="fa fa-user" aria-hidden="true"></i> Patrons</h1> 
                 <div class="row">
                     <div class="col-lg-8">
-                        <p>Number Blocked: <span id="blocked" class="odometer">0</span></p>
-                        <p>Average Age: <span id="avg-age" class="odometer">0</span></p>
+                        <p>&nbsp;&nbsp;&nbsp;Number Blocked: <span id="blocked" class="odometer">0</span></p>
+                        <p>&nbsp;&nbsp;&nbsp;Average Age: <span id="avg-age" class="odometer">0</span></p>
                     </div>
                 </div>
           </div>
@@ -52,10 +52,10 @@
                 <h1 align='center'><i class="fa fa-barcode" aria-hidden="true"></i> Items</h1> 
                 <div class="row">
                     <div class="col-lg-8">
-                        <p>Checked out: <span id="checked" class="odometer">0</span></p>
-                        <p>Amount overdue: <span id="overdue" class="odometer">0</span></p>
-                        <p>Total Available: <span id="totalAvailable" class="odometer">0</span></p>
-                        <p>Percent Checked out: <span id="items-percent-out" class="odometer">0</span>%</p>
+                        <p>&nbsp;&nbsp;&nbsp;Checked out: <span id="checked" class="odometer">0</span></p>
+                        <p>&nbsp;&nbsp;&nbsp;Amount overdue: <span id="overdue" class="odometer">0</span></p>
+                        <p>&nbsp;&nbsp;&nbsp;Total Available: <span id="totalAvailable" class="odometer">0</span></p>
+                        <p>&nbsp;&nbsp;&nbsp;Percent Checked out: <span id="items-percent-out" class="odometer">0</span>%</p>
                     </div>
                 </div>
           </div>
@@ -90,7 +90,7 @@
           </div>
         </div>
 
-        <div class="row" style="height:3%">
+        <div class="row" style="height:4%">
           <div class="col-sm-12" style="color: white; background-color: gray">
                 <p id="stamp" style="color: black"></p> 
           </div>
