update & added monthly meeting graph

--- a/daily_cat_searches.html
+++ b/daily_cat_searches.html
@@ -1,6 +1,9 @@
 <html>
-<iframe src="https://www.chapelhillopendata.org/explore/embed/dataset/daily-catalog-searches/?sort=column_2&static=false&datasetcard=false" width="800" height="550" frameborder="0"></iframe><br><br>
-<form style="color: black" action="index.html">
-    <input type="submit" value="Back"/>
-</form>
+    <body>
+        <iframe src="https://www.chapelhillopendata.org/explore/embed/dataset/daily-catalog-searches/?sort=column_2&static=false&datasetcard=false" width="800" height="850" frameborder="0"></iframe>
+        <br><br>
+        <form style="color: black" action="index.html">
+            <input type="submit" value="Back"/>
+        </form>
+    </body>
 </html>
